Update por Gafur

--- a/ejercicios/ejercicio2.html
+++ b/ejercicios/ejercicio2.html
@@ -20,6 +20,6 @@
         <li>Elemento C</li>
     </ul>  
 
-    <p> Archivo editado por Ha </p>
+    <p> Archivo editado por Ha GAFUR XDF </p>
 </body>
 </html>
